# mozregression

./: .coveragerc  .gitignore  .linter-files  .travis.yml  MANIFEST.in  README.md  _config.yml  appveyor.yml  check.py  contribute.md  index.html  index.less  index.md  install-windows.bat  install-windows.sh  install.md  julien-prefetch.py  mozInstall.py  news.html  pyproject.toml  quickstart.md  regression.py  requirements-dev.txt  requirements-gui-dev.txt  runnightly.py  setup.cfg  setup.py  test.py  usage.md  utils.py
.github/: dependabot.yml
.github/workflows/: build.yml  compile-requirements.yml  deploy-gui.yml  deploy.yml  python-package.yml  run-compile-requirements.yml  sandbox.yml  upload-gui-to-workflow.yml
_data/: mozregression_supported_apps.yml
_includes/: head.html  header.html
_layouts/: default.html  documentation.html  home.html
_posts/: 2015-02-06-0.33-release.md  2015-03-02-0.34-release.md  2015-03-12-0.35-release.md  2015-04-17-0.36-release.md  2015-08-12-0.41-release.md  2015-08-29-0.42-release.md  2015-09-05-1.0.0-release.md  2015-10-31-1.1.0-release.md  2015-11-24-1.2.0-release-and-gui-0.5.0.md  2015-12-01-2.0.0-release.md  2015-12-22-2.1.0-release-and-gui-0.7.0.md
_sass/: _base.scss  _layout.scss
css/: main.scss
docs/: README.md  contribute.md  install.md  quickstart.md
docs/_data/: mozregression_supported_apps.yml
docs/_includes/: head.html
docs/_layouts/: documentation.html
docs/_posts/: 2015-03-12-0.35-release.md  2015-05-11-gui.md  2015-07-13-0.37-release.md  2015-07-17-0.38-0.39-release.md  2015-07-31-0.40-release.md  2015-09-12-gui-0.4.0.md  2015-12-04-0.6.0-gui-release.md  2016-01-19-2.2.0-release-and-gui-0.8.md  2016-02-09-2.3.0-release-and-gui-0.9.md
docs/_sass/: _base.scss  _layout.scss  _syntax-highlighting.scss
docs/css/: main.scss
docs/documentation/: automatic-bisection.md  configuration.md  telemetry.md  usage.md
docs/glean/: metrics.md
documentation/: configuration.md  index.md  telemetry.md  usage.md
gui/: .coveragerc  README.rst  bisection.py  build.py  dmg_settings.py  gui.py  gui.spec  mozregression-gui.py  requirements.txt  resources.qrc  setup.cfg  setup.py  splash-hook.py  splash_hook.py  test-requirements.txt  wizard.py
gui/icons/: app_icon.icns
gui/mac/: entitlements.xml
gui/mozregui/: __init__.py  addons_editor.py  bisect_options.py  bisection.py  build_runner.py  check_release.py  crash_reporter.py  global_prefs.py  log_report.py  main.py  mainwindow.py  patch_requests.py  pref_editor.py  report.py  report_delegate.py  single_runner.py  skip_chooser.py  utils.py  wizard.py
gui/tests/: __init__.py  test_addons_editor.py  test_bisect_options.py  test_bisection.py  test_build_runner.py  test_check_release.py  test_crash_reporter.py  test_global_prefs.py  test_log_report.py  test_main.py  test_pref_editor.py  test_report.py  test_skip_chooser.py  test_utils.py  test_wizard.py
gui/ui/: intro.ui  nightlies.ui
gui/wininst/: wininst.nsi
js/: main.js
mozregression/: __init__.py  approx_persist.py  b2g.py  bisector.py  branches.py  bugzilla.py  build_data.py  build_info.py  build_range.py  class_registry.py  cli.py  config.py  dates.py  download_manager.py  errors.py  fetch_build_info.py  fetch_configs.py  history.py  inbound_prefetch.py  inboundfinder.py  json_pushes.py  launchers.py  limitedfilecache.py  linux_utils.py  log.py  mach_interface.py  main.py  metrics.yaml  mozInstall.py  network.py  persist_limit.py  pings.yaml  prefetch.py  pyinstaller.py  regression.py  releases.py  runinbound.py  runnightly.py  tc_authenticate.py  telemetry.py  (+3 more)
mozregression.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
requirements/: all.txt  base.in  base.txt  base.universal2.in  build.txt  console-dev.txt  console.txt  dev.in  dev.txt  gui-dev.in  gui-dev.txt  gui.in  gui.txt  linters.in  linters.txt  python35-compat.in  python36-compat.in  requirements-3.10-Linux.txt  requirements-3.10-Windows.txt  requirements-3.10-macOS.txt  requirements-3.11-Linux.txt  requirements-3.11-Windows.txt  requirements-3.11-macOS.txt  requirements-3.12-Linux.txt  requirements-3.12-Windows.txt  requirements-3.12-macOS.txt  requirements-3.13-Linux.txt  requirements-3.13-Windows.txt  requirements-3.13-macOS.txt  requirements-3.6-Linux.txt  requirements-3.7-Linux.txt  requirements-3.8-Linux.txt  requirements-3.9-Linux.txt  requirements-3.9-Windows.txt  requirements-3.9-macOS.txt
tests/: test_utils.py
tests/unit/: __init__.py  (+25 more)
(+17 files in other folders)
